fix (theme): dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -46,10 +46,14 @@ body{
 
 nav{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     padding: 10px;
     box-shadow: 0px 20px 150px var(--color_b2);
+}
+
+@media (min-width: 600px) {
+    nav { justify-content: center; }
 }
 
 i{
@@ -62,7 +66,7 @@ i{
 }
 
 .timer-text{
-    font-size: 64px;
+    font-size: 48px;
     margin: 0;
 }
 
@@ -74,6 +78,10 @@ i{
 
 .timer-text:hover{
     color: var(--color_neon_b1);
+}
+
+@media (min-width: 600px) {
+    .timer-text { font-size: 64px; }
 }
 
 /* Buttons */
