--- a/css/stopwatch.css
+++ b/css/stopwatch.css
@@ -1,12 +1,18 @@
 /* SideBar */
 
 .sideBar{
-    position: absolute;
     border: 1px solid var(--color_b2);
     min-width: 15%;
-    margin: 30px 20px;
+    margin: 80px 20px;
     border-radius: 5px;
     background-color: var(--color_b2);
+}
+
+@media (min-width: 600px) {
+    .sideBar { 
+        position: absolute;
+        top: 50px;
+    }
 }
 
 
@@ -25,6 +31,7 @@
 
 .table-laps{
     border-collapse: collapse;
+    width: 100%;
 }
 
 .table-laps thead th{
