--- a/css/watch.css
+++ b/css/watch.css
@@ -25,7 +25,11 @@
     justify-items: center;
     height: 100%;
     padding: 20px;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+}
+
+@media (min-width: 600px) {
+    .otherSpindles-items { grid-template-columns: repeat(4, 1fr); }
 }
 
 .otherSpindles-box{
@@ -33,6 +37,10 @@
     border-radius: 10px;
     padding: 10px;
     margin: 5px;
+}
+
+.otherSpindles-box:hover{
+    cursor: pointer;
 }
 
 .otherSpindles-box p{
